# drouxy-chatbot

./: .env  .env.local.exemple  .gitignore  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
mock/: dialogs_en.json  dialogs_fr.json
src/: App.svelte  Chat.svelte  main.ts  types.d.ts
src/Chat/: MessageContent.svelte
src/Chats/: InputMessage.svelte  VoiceSpeech.svelte
src/lib/: Chat.svelte  DefaultScreen.svelte  InputMessage.svelte  MessageContent.svelte  VoiceSpeech.svelte  curve.ts
src/lib/Chat/: InputMessage.svelte  MessageContent.svelte  UserDetail.svelte  VoiceSpeech.svelte
src/lib/components/: Loader.svelte  Login.svelte
src/network/: client.ts  socket.ts
src/store/: authentication.ts  bot.ts  messages.ts  store.ts
src/utils/: canvas-curve.ts  concatenate-blobs.ts  constants.ts  inline-worker.ts  recorder-controller.ts  wait.ts
src/utils/animations/: transitions.ts
src/utils/recorder/: constants.ts  index.d.ts  media-recorder.ts  microphone.ts  recorder.ts
store/: messages.ts  store.ts
styles/: global.scss
utils/: canvas-curve.ts  noise-capture.ts  recorder-controller.ts  visualizer.ts
utils/recorder/: constants.ts  index.d.ts  index.ts  microphone.ts  recorder.ts
